--- a/community-ui/package.json
+++ b/community-ui/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.15.14",
+    "mavon-editor": "^2.10.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
