--- a/community-ui/package.json
+++ b/community-ui/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "element-ui": "^2.15.14",
     "mavon-editor": "^2.10.4",
     "vue": "^2.5.2",
