websocket（已改好，可以正常启动） hln 2023-11-07 21:37

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -94,6 +94,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <artifactId>core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
