--- a/community-ui/package.json
+++ b/community-ui/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "axios": "^1.5.1",
     "element-ui": "^2.15.14",
+    "jquery": "^3.7.1",
     "mavon-editor": "^2.10.4",
+    "quill": "^1.3.7",
+    "quill-image-extend-module": "^1.1.2",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
