--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -5,13 +5,17 @@ spring:
     url: jdbc:mysql://172.30.34.66:3306/community_v2
     username: root
     password: TLMTEAMYLL4523..
-
+  servlet:
+    multipart:
+      max-file-size: 10000MB
+      max-request-size: 100000MB
 server:
   port: 8008
 
 # 选择api项目下的resouces路径下的user文件夹
 # filePath: "/Users/yangyida/Documents/project/complaint_system/web-server/src/main/resources/img/user/"
-filePath: "D:/Desktop/demo/Community-system/core/src/main/resources/img/user/"
+filePath: "D:/Desktop/System/history/Community/Community-system/core/src/main/resources/img/user/"
+#D:\Desktop\System\history\Community\Community-system\core\src\main\resources
 # 服务器url路径
 projecturl: "http://127.0.0.1:8008"
 
